Fixed content shifting

--- a/Frontend/my-vite-project/src/components/Modal/Modal.css
+++ b/Frontend/my-vite-project/src/components/Modal/Modal.css
@@ -3,7 +3,6 @@ body.no-scroll {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
 }
 
 @media (min-width: 1024px) {
